# orangelink-browser

./: .env.example  .gitignore  PrivacyBrowserFramework.spec  README.md  pyproject.toml  脐橙浏览器.spec
app/: main.py  runtime.py
round2/: .gitignore  LICENSE  README.md  WORK_SUMMARY.md  pyproject.toml
round2/app/: __init__.py
round2/app/desktop/: __init__.py  main.py  models.py  state_store.py  window.py
round2/app/homepage/: homepage.py
round2/app/runtime/: __init__.py  cdp_client.py  chromium_launcher.py  config.py  engine_version.py  fingerprint.py  fingerprint_controller.py  profiles.py  proxy_geo.py  session_manager.py
round2/docs/release/: ACCEPTANCE_MATRIX.md  RELEASE_RUNBOOK.md
round2/docs/superpowers/plans/: 2026-05-01-orangelink-mvp-completion.md
round2/relay/: Cargo.toml
round2/relay/src/: main.rs
round2/relay/tests/: fail_closed.rs
round2/scripts/: build_portable.ps1  cdp_runtime_check.py  desktop_gui.py  packaging_contract.py  validate_packaged_release.py
round2/tests/acceptance/: test_acceptance_matrix_contract.py  test_packaging_contract.py
round2/tests/desktop/: test_state_store.py  test_window_models.py
round2/tests/runtime/: test_cdp_client_contract.py  test_chromium_proxy_args.py  test_config_contract.py  test_engine_version_policy.py  test_fingerprint_contract.py  test_fingerprint_controller.py  test_health_checks.py  test_multi_session.py  test_profile_isolation.py  test_proxy_contract.py  test_proxy_geo.py  test_proxy_loss_fail_closed.py  test_session_launch_contract.py  test_session_lifecycle.py
scripts/: build_portable.ps1  (+7 more)
(+44 files in other folders)
