[project]
name = "privacy-browser-framework"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "psutil>=7.2.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyside6>=6.8,<7",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
pbf-run = "app.main:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
