[project]
name = "orangelink-browser"
version = "0.1.0"
description = "Multi-profile browser environment manager with proxy geo-detection and fingerprint evasion"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "PySide6>=6.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
